[gd_scene load_steps=6 format=3 uid="uid://bx6tbjiecu3is"]

[ext_resource type="Script" path="res://GameSelectItem.gd" id="1_8bbfp"]
[ext_resource type="Texture2D" uid="uid://bpymmosfsj2rq" path="res://icon.svg" id="1_605mt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkxrt"]
border_color = Color(0.654902, 0.835294, 0.898039, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgdl0"]
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_b4lry"]
font_size = 40

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mkxrt")
script = ExtResource("1_8bbfp")

[node name="Panel" type="PanelContainer" parent="."]
clip_children = 2
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wgdl0")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 2
texture = ExtResource("1_605mt")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="Label" type="Label" parent="Panel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Crazy Clowns"
label_settings = SubResource("LabelSettings_b4lry")
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
